plugins/xpath/xpath-lang/testData/xpath/highlighting/numberFollowedByToken.xpath2
<error descr="Number literal must be followed by whitespace in XPath 2">10div 2</error> + 3 mod 2